# Send-file-P2P

./: .gitignore  Convention.md  README.md  Windows Compatibility.md  auto-evaluation.md  exemple.ndex  make_all.sh  run.sh
Boss/: Boss.cbp  CMakeLists.txt  Makefile
Boss/INC/: block_group.h  boolean.h  client.h  collector.h  error.h  group.h  message.h  ping.h  server.h  socket.h  struct_block_group.h  struct_client.h  struct_collector.h  struct_group.h  struct_socket.h  tcp.h  windows.h
Boss/SRC/: block_group.c  client.c  collector.c  group.c  main.c  message.c  ping.c  server.c  tcp.c  windows.c
Client/: Makefile
Client/INC/: boolean.h  index_loader.h  struct_index.h  tcp.h
Client/SRC/: index_loader.c  main.c  tcp.c
Collector/: CMakeLists.txt  Collector.cbp  Makefile  moveFile.bat  revertMoveFile.bat
Collector/INC/: boolean.h  client.h  collectors.h  collectors_list.h  configuration.h  error.h  index_loader.h  inout.h  message.h  server.h  socket.h  struct_client.h  struct_collect.h  struct_index.h  struct_server.h  struct_socket.h  tcp.h  verification.h  volume.h  windows.h
Collector/SRC/: client.c  collectors.c  collectors_list.c  index_loader.c  inout.c  main.c  message.c  server.c  tcp.c  verification.c  volume.c  windows.c
Generator/: CMakeLists.txt  Generator.cbp  Makefile
Generator/INC/: boolean.h  error.h  file.h  inout.h  verification.h
Generator/SRC/: file.c  inout.c  main.c  verification.c
SRC/: affichage.c  main.c
Scripts_Automatisation/: flood_boss.sh  make_all.sh  moveFile.bat.ndex
Server/INC/: affichage.h  error.h  file.h
(+2 files in other folders)
